# Homework_19_2

./: README.md  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
config/: settings.py  urls.py
