[tool.poetry]
name = "homework-19-2"
version = "0.1.0"
description = ""
authors = ["AleksandrZaec <zaecam95@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_19_2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-jazzmin = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
